--- a/CucumberTest/src/test/java/lucidity/bdd/configs/configuration.properties
+++ b/CucumberTest/src/test/java/lucidity/bdd/configs/configuration.properties
@@ -1,1 +1,1 @@
-reportConfigPath = C:\\Lucidity BDD Test\\CucumberTest\\src\\test\\java\\lucidity\\bdd\\configs\\extent-config.xml
+reportConfigPath = extent-config.xml
